--- a/lang/en-US.json
+++ b/lang/en-US.json
@@ -1,21 +1,21 @@
 {
-  "signIn":"Sign In",
-  "signUp":"Sign Up",
-  "username":"User Name",
-  "password":"Password",
-  "Username is required":"Username is required",
-  "Password is required":"Password is required",
-  "Create your account":"Create your account",
-  "createAccount":"Create Account",
-  "email":"E-mail",
-  "Sign in instead":"Sign in instead",
-  "Please enter your username":"Please enter your username",
-  "Username must be at least 4 characters":"Username must be at least 4 characters",
-  "Please enter your e-mail address":"Please enter your e-mail address",
-  "E-mail address must be valid":"E-mail address must be valid",
-  "Please enter your password":"Please enter your password",
-  "Password must be at least 8 characters":"Password must be at least 8 characters",
-  "Please confirm your password":"Please confirm your password",
+  "signIn": "Sign In",
+  "signUp": "Sign Up",
+  "username": "User Name",
+  "password": "Password",
+  "Username is required": "Username is required",
+  "Password is required": "Password is required",
+  "Create your account": "Create your account",
+  "createAccount": "Create Account",
+  "email": "E-mail",
+  "Sign in instead": "Sign in instead",
+  "Please enter your username": "Please enter your username",
+  "Username must be at least 4 characters": "Username must be at least 4 characters",
+  "Please enter your e-mail address": "Please enter your e-mail address",
+  "E-mail address must be valid": "E-mail address must be valid",
+  "Please enter your password": "Please enter your password",
+  "Password must be at least 8 characters": "Password must be at least 8 characters",
+  "Please confirm your password": "Please confirm your password",
   "welcomeTo": "Welcome to",
   "language": "Language",
   "setApiKey": "Set API Key",
@@ -37,7 +37,7 @@
   "followSystem": "Follow system",
   "themeMode": "Theme Mode",
   "feedback": "Feedback",
-  "newConversation": "New conversation",
+  "newConversation": "New Conversation",
   "defaultConversationTitle": "Unnamed",
   "clearConversations": "Clear conversations",
   "modelParameters": "Model Parameters",
